slight change to mobile cv lines to prevent misalignments

--- a/assets/sass/_conditional_small.scss
+++ b/assets/sass/_conditional_small.scss
@@ -344,7 +344,7 @@
   }
 
   .dc-cv--entry {
-    height: 1.33em;
+    height: 1.35em;
   }
 
     .dc-cv--entry::before{
